# cpp_practice_01

./: .aider.chat.history.md  .gitignore
practice01/arrow-practice2/: CMakeLists.txt  vcpkg.json
practice01/backtest-gym/: CMakeLists.txt
practice01/backtest-gym/configs/: frontend_config.json
practice01/backtest-gym/src/: DataLoader.cpp  DataLoader.h  FrontendController.cpp  main.cpp
practice01/file-reading/: CMakeLists.txt  CMakeLists.txt.server  CMakeSettings.json  README.md  build_and_test.sh  requirements.txt  test.py  test_drl.py  test_file_access.py  test_indicators.py  trading_env.py  trading_env_enhanced.py  vcpkg.json
practice01/file-reading/.cache/clangd/index/: BacktestEngine.cpp.6EF5E90416D7D7C7.idx  BacktestEngine.h.F156306F9BD76E68.idx  DataLoader.cpp.1DEE8D6FE71D92B7.idx  DataLoader.h.4C1ABA027257751D.idx  FrontendController.cpp.C2960AA869BC35AB.idx  FrontendController.h.363B210972F84711.idx  MyWebSocketController.cpp.E918902AAB844773.idx  MyWebSocketController.h.D7A0974E0E61516D.idx  PyBindings.cpp.AA865475A401727D.idx  TechnicalIndicators.h.D0D86504E53C5009.idx  main.cpp.DA8FB5D9C6780236.idx
practice01/file-reading/docs/: README.md  architecture.txt  generate_architecture_diagram.py
practice01/file-reading/frontend/: package-lock.json  package.json
practice01/file-reading/frontend/src/: App.css  App.tsx  index.css  main.tsx
practice01/file-reading/src/: #DataLoader.cpp#  #FrontendController.cpp#  #main.cpp#  .#FrontendController.cpp  BacktestEngine.cpp  BacktestEngine.h  DataLoader.cpp  DataLoader.h  FrontendController.cpp  FrontendController.h  MyWebSocketController.cpp  MyWebSocketController.h  PyBindings.cpp  TechnicalIndicators.cpp  TechnicalIndicators.h  main.cpp
practice01/file-reading/src/stock_data/: time-series-AAPL-5min.csv
